manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: "allen18test-9db8"
    labels:
        app: "allen18test-9db8"
spec:
    type: ClusterIP
    ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    selector:
        app: "allen18test-9db8"
